--- a/_confiq.yml
+++ b/_confiq.yml
@@ -1,4 +1,4 @@
 title: Sebastian Luber
-logo: Homepage.jpg
-#description: text below immage
+logo: /Homepage.png
+description: Data Enthusiast
 theme: jekyll-theme-minimal
