--- a/_confiq.yml
+++ b/_confiq.yml
@@ -1,4 +1,5 @@
 title: Sebastian Luber
-logo: /assets/Picture1.jpg
+logo:
+  - /assets/Picture1.jpg
 show_downloads: true
 theme: jekyll-theme-Chirpy
