--- a/_confiq.yml
+++ b/_confiq.yml
@@ -1,7 +1,6 @@
 title: Sebastian Luber
-logo:
-  - /assets/Picture1.jpg
-show_downloads: true
+logo: /assets/Picture1.jpg
+# show_downloads: true
 theme: jekyll-theme-minimal
 social:
   - name: LinkedIn
