--- a/_confiq.yml
+++ b/_confiq.yml
@@ -1,8 +1,4 @@
-title: Sebastian Luber
-logo: /assets/Picture1.jpg
-# show_downloads: true
-theme: jekyll-theme-minimal
-social:
-  - name: LinkedIn
-    url: "https://www.linkedin.com/in/sebastian-luber-2aba9a147/"
-    icon: "fab fa-linkedin"
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme
+title: [Sebastian Luber]
