--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-gem "github-pages", group: :jekyll_plugins
+title: Shaw Talebi
+logo: /assets/img/headshot_circle.png
+#description: text below image
+show_downloads: true
+theme: jekyll-theme-minimal
