--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,6 @@ logo: /assets/Picture1.jpg
 #description: text below image
 #show_downloads: true
 theme: jekyll-theme-minimal
+---
+
+![Sebastian Luber](/assets/Picture1.jpg){:style="width:50%;"}
