--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,6 @@ description: PhD. Financial Economics, CBS/UCLA
 #show_downloads: true
 theme: jekyll-theme-minimal
 ---
-
+https://www.linkedin.com/in/sebastian-luber-2aba9a147/
 ![Sebastian Luber](/assets/Picture1.jpg){:style="width:50%;"}
+[LinkedIn](https://www.linkedin.com/in/sebastian-luber-2aba9a147/) | [Email](mailto:sl.fi@cbs.dk)
