--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Sebastian Luber
 logo: /assets/Picture1.jpg
-description: PhD. Financial Economics, CBS/UCLA
+description: PhD. in Finance, CBS/UCLA
 #show_downloads: true
 theme: jekyll-theme-minimal
 ---
