--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,5 @@ description: PhD. in Finance, CBS/UCLA
 #show_downloads: true
 theme: jekyll-theme-minimal
 ---
-https://www.linkedin.com/in/sebastian-luber-2aba9a147/
 ![Sebastian Luber](/assets/Picture1.jpg){:style="width:50%;"}
-[LinkedIn](https://www.linkedin.com/in/sebastian-luber-2aba9a147/) | [Email](mailto:sl.fi@cbs.dk)
+[![LinkedIn](https://img.icons8.com/fluent/24/000000/linkedin.png)](https://www.linkedin.com/in/sebastian-luber-2aba9a147/) [![Email](https://img.icons8.com/fluent/24/000000/email.png)](mailto:sl.fi@cbs.dk)
