--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,20 @@ description: PhD. in Finance, CBS/UCLA
 #show_downloads: true
 theme: jekyll-theme-minimal
 
+
+---
+
+![Logo](/assets/Picture1.jpg)
+
+PhD. in Finance, CBS/UCLA
+
+<br><br>
+<a href="https://www.linkedin.com/in/jacob-lundeen-b49b8390/"> 
+  <img src="https://img.shields.io/badge/LinkedIn-blue?logo=LinkedIn" alt="LinkedIn"> 
+</a> 
+
+<br><br>
+<a href="https://rpubs.com/jacoblundeen"> 
+  <img src="https://img.shields.io/badge/RPubs-blue?logo=R" alt="RPubs"> 
+</a>
+
