--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,9 @@
 title: Sebastian Luber
 logo: /assets/Picture1.jpg
-description: PhD. in Finance, CBS/UCLA
-<br><br>
-  <a href="https://www.linkedin.com/in/jacob-lundeen-b49b8390/"> <img src="https://img.shields.io/badge/LinkedIn-blue?logo=LinkedIn"> </a> 
-  <br><br>
-  <a href="https://rpubs.com/jacoblundeen"> <img src="https://img.shields.io/badge/RPubs-blue?logo=R"> </a>
+description: "Ph.D. in Finance, CBS/UCLA"
 #show_downloads: true
 theme: jekyll-theme-minimal
-
 ---
 
-![Logo](/assets/Picture1.jpg)
-
-
-<br><br>
-<a href="https://www.linkedin.com/in/jacob-lundeen-b49b8390/"> 
-  <img src="https://img.shields.io/badge/LinkedIn-blue?logo=LinkedIn" alt="LinkedIn"> 
-</a> 
-
-<br><br>
-<a href="https://rpubs.com/jacoblundeen"> 
-  <img src="https://img.shields.io/badge/RPubs-blue?logo=R" alt="RPubs"> 
-</a>
+![Sebastian Luber](/assets/Picture1.jpg){:style="width:50%;"}
 
