--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,5 @@ theme: jekyll-theme-minimal
 ---
 
 ![Sebastian Luber](/assets/Picture1.jpg){:style="width:50%;"}
-[![LinkedIn](https://img.icons8.com/fluent/24/000000/linkedin.png)](https://www.linkedin.com/in/your-profile)
-
+<a href="https://www.linkedin.com/in/your-profile"><i class="fab fa-linkedin"></i></a> 
+<a href="mailto:your.email@example.com"><i class="fas fa-envelope"></i></a>
